[gd_scene load_steps=7 format=2]

[ext_resource path="res://CourseSelection/CourseBtn.tscn" type="PackedScene" id=1]
[ext_resource path="res://CourseSelection/CourseSelectScreen.gd" type="Script" id=2]
[ext_resource path="res://Sprites/ChiKareGo2.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 3 )

[node name="CourseSelectScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.32549, 0.552941, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_right = 175.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 350.0
margin_bottom = 250.0
custom_constants/separation = 20

[node name="Headline" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 25.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Select Course"
align = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 350.0
margin_bottom = 145.0
custom_constants/hseparation = 30
columns = 2

[node name="Python" parent="MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_right = 155.0
margin_bottom = 100.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "Python"
expand_icon = true
course_path = "res://Courses/Python/Course.tscn"

[node name="Placeholder" parent="MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 195.0
margin_right = 345.0
margin_bottom = 100.0
size_flags_horizontal = 6
size_flags_vertical = 9
custom_fonts/font = SubResource( 2 )
text = "Placeholder"

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 350.0
margin_bottom = 225.0
rect_min_size = Vector2( 350, 60 )

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer/ColorRect"]
margin_right = 350.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/Python" to="." method="_on_Python_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/GridContainer/Python" to="." method="_on_Python_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Python" to="." method="_on_Python_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/Placeholder" to="." method="_on_Placeholder_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/GridContainer/Placeholder" to="." method="_on_Placeholder_mouse_exited"]
